// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displayResult Docker test result 1`] = `
"
Testing src...

✗ High severity vulnerability found in musl
  Description: Out-of-bounds Write
  Info: [URL]
  Introduced through: meta-common-packages@meta
  From: meta-common-packages@meta > musl@1.1.19-r10
  Fixed in: 1.1.19-r11

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r0 (triggers upgrades to expat@2.2.7-r0)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r0

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r1 (triggers upgrades to expat@2.2.7-r1)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r1



Organization:      gitphill
Package manager:   undefined
Docker image:      src
Licenses:          enabled

Tested 40 dependencies for known issues, found 3 issues.

Tip: Detected multiple supported manifests (3), use --all-projects to scan all of them at once.

Snyk wasn’t able to auto detect the base image, use \`--file\` option to get base image remediation advice.
Example: $ snyk container test src --file=path/to/Dockerfile

To remove this message in the future, please run \`snyk config set disableSuggestions=true\`"
`;

exports[`displayResult Docker test result no file path and base image auto detected 1`] = `
"
Testing src...

✗ High severity vulnerability found in musl
  Description: Out-of-bounds Write
  Info: [URL]
  Introduced through: meta-common-packages@meta
  From: meta-common-packages@meta > musl@1.1.19-r10
  Fixed in: 1.1.19-r11

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r0 (triggers upgrades to expat@2.2.7-r0)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r0

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r1 (triggers upgrades to expat@2.2.7-r1)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r1



Organization:      gitphill
Package manager:   undefined
Docker image:      src
Base image:        base Image
Licenses:          enabled

Tested 40 dependencies for known issues, found 3 issues.

Tip: Detected multiple supported manifests (3), use --all-projects to scan all of them at once."
`;

exports[`displayResult Docker test result with base image name not found warning 1`] = `
"
Testing alpine:latest...

✗ High severity vulnerability found in musl
  Description: Out-of-bounds Write
  Info: [URL]
  Introduced through: meta-common-packages@meta
  From: meta-common-packages@meta > musl@1.1.19-r10
  Fixed in: 1.1.19-r11



Organization:      test-organization
Package manager:   apk
Target file:       Dockerfile
Project name:      alpine
Docker image:      alpine:latest
Platform:          linux/amd64
Licenses:          enabled

Tested 40 dependencies for known issues, found 1 issue.

Tip: Detected multiple supported manifests (1), use --all-projects to scan all of them at once.

Warning: Unable to analyse Dockerfile provided through \`--file\`.
         Dockerfile must begin with a FROM instruction. This may be after parser directives, comments, and globally scoped ARGs.

Pro tip: use \`--exclude-base-image-vulns\` to exclude from display Docker base image vulnerabilities.

To remove this message in the future, please run \`snyk config set disableSuggestions=true\`"
`;

exports[`displayResult Docker test result with base image non resolvable warning 1`] = `
"
Testing alpine:latest...

✗ High severity vulnerability found in musl
  Description: Out-of-bounds Write
  Info: [URL]
  Introduced through: meta-common-packages@meta
  From: meta-common-packages@meta > musl@1.1.19-r10
  Fixed in: 1.1.19-r11



Organization:      test-organization
Package manager:   apk
Target file:       Dockerfile
Project name:      alpine
Docker image:      alpine:latest
Platform:          linux/amd64
Licenses:          enabled

Tested 40 dependencies for known issues, found 1 issue.

Tip: Detected multiple supported manifests (1), use --all-projects to scan all of them at once.

Warning: Unable to analyse Dockerfile provided through \`--file\`.
         Dockerfile must have default values for all ARG instructions.

Pro tip: use \`--exclude-base-image-vulns\` to exclude from display Docker base image vulnerabilities.

To remove this message in the future, please run \`snyk config set disableSuggestions=true\`"
`;

exports[`displayResult Docker test result with remediation advice 1`] = `
"
Testing src...

✗ High severity vulnerability found in musl
  Description: Out-of-bounds Write
  Info: [URL]
  Introduced through: meta-common-packages@meta
  From: meta-common-packages@meta > musl@1.1.19-r10
  Fixed in: 1.1.19-r11

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r0 (triggers upgrades to expat@2.2.7-r0)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r0

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r1 (triggers upgrades to expat@2.2.7-r1)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r1



Organization:      gitphill
Package manager:   undefined
Docker image:      src
Base image:        ubuntu:20.04
Licenses:          enabled

Tested 40 dependencies for known issues, found 3 issues.

Tip: Detected multiple supported manifests (3), use --all-projects to scan all of them at once.

Base Image    Vulnerabilities  Severity
ubuntu:20.04  19               0 critical, 0 high, 3 medium, 16 low

Recommendations for base image upgrade:

Major upgrades
Base Image              Vulnerabilities  Severity
ubuntu:impish-20210928  13               0 critical, 0 high, 2 medium, 11 low


Learn more: [URL]"
`;
